--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- node 文件名 - nodemon 文件名 `npm install nodemon -g`",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
